--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch app --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
